# poc-bricks

./: hrhh.json  htest.json  hvi6.json  pyproject.toml
model_rules/: build_condition_expression.py  config_loader.py  expression_builder.py  io_manager.py  job.py  main.py  rule_engine.py
output_parquet/: .part-00000-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00001-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00002-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00003-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00004-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00005-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00006-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00007-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00008-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00009-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00010-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  .part-00011-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy.crc  part-00000-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy  part-00001-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy  part-00002-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy  part-00003-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy  part-00004-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy  part-00005-242e00e0-f34f-44d2-b637-644ba1b18107-c000.csv.snappy  (+6 more)
spark_project/: Poc_json_spark.ipynb  dataframe_api.ipynb  (+2 more)
(+1 files in other folders)
