[project]
name = "spark-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Thiago Alves",email = "thiago.ndev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=3.5.4,<4.0.0)",
    "jupyterlab (>=4.3.4,<5.0.0)",
    "jupyterlab-lsp (>=5.1.0,<6.0.0)",
    "python-lsp-server (>=1.12.0,<2.0.0)",
    "boto3 (>=1.42.78,<2.0.0)",
    "boto3-stubs (>=1.42.78,<1.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
